ntu-alc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ntu-alc-client
  labels:
    k8s-app: ntu-alc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ntu-alc-client
  template:
    metadata:
      labels:
        k8s-app: ntu-alc-client
        name: ntu-alc-client
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: disam8853/ntu-alc-client
        name: ntu-alc-client
        ports:
        - containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ntu-alc-server
  labels:
    k8s-app: ntu-alc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ntu-alc-server
  template:
    metadata:
      labels:
        k8s-app: ntu-alc-server
        name: ntu-alc-server
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: disam8853/ntu-alc-server
        name: ntu-alc-server
        ports:
        - containerPort: 3000
