ntu-alc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntu-alc-ingress
spec:
  tls:
  - hosts:
      - ntu-alc.minikube
    secretName: tls-cert
  rules:
  - host: ntu-alc.minikube
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: ntu-alc-client
            port: 
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: ntu-alc-client
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntu-alc-server
            port: 
              number: 3000
